--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.9",
 		"svelte-check": "^3.6.3",
+		"svelte-meta-tags": "^3.1.0",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
